env/error.txt
uploaded/383_750_1569994957.cpp:1:1: error: ‘sfewfewfewf’ does not name a type
 sfewfewfewf
 ^~~~~~~~~~~
